@@ -409,14 +409,22 @@ int mosquitto_int_option(struct mosquitto *mosq, enum mosq_opt_t option, int val
 			if(value < 0 || value > 65535){
 				return MOSQ_ERR_INVAL;
 			}
-			mosq->receive_maximum = value;
+			if(value == 0){
+				mosq->msgs_in.inflight_maximum = 65535;
+			}else{
+				mosq->msgs_in.inflight_maximum = value;
+			}
 			break;
 
 		case MOSQ_OPT_SEND_MAXIMUM:
 			if(value < 0 || value > 65535){
 				return MOSQ_ERR_INVAL;
 			}
-			mosq->send_maximum = value;
+			if(value == 0){
+				mosq->msgs_out.inflight_maximum = 65535;
+			}else{
+				mosq->msgs_out.inflight_maximum = value;
+			}
 			break;
 
 		case MOSQ_OPT_SSL_CTX_WITH_DEFAULTS:
