@@ -6,6 +6,8 @@ Broker:
 
 Client library:
 - Don't use `/` in autogenerated client ids, to avoid confusing with topics.
+- Fix `mosquitto_max_inflight_messages_set()` and `mosquitto_int_option(...,
+  MOSQ_OPT_*_MAX, ...)` behaviour. Closes #1417.
 
 Clients:
 - mosquitto_sub: Fix `-E` incorrectly not working unless `-d` was also
